A Boolean question appears slightly outside borders within the Visible If logic editor Fixes #5286

--- a/packages/survey-creator-core/src/components/tabs/logic.scss
+++ b/packages/survey-creator-core/src/components/tabs/logic.scss
@@ -248,12 +248,6 @@
   margin-right: calcSize(1);
 }
 
-.sl-row {
-  .sd-scrollable-container:not(.sd-scrollable-container--compact) {
-    overflow-x: auto;
-  }
-}
-
 .sl-question__title {
   color: $foreground;
   font-size: calcSize(2);
